--- a/rmi-client/pom.xml
+++ b/rmi-client/pom.xml
@@ -8,6 +8,40 @@
     <artifactId>ssoclient</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <spring.version>4.1.6.RELEASE</spring.version>
+        <mybatis.version>3.3.0</mybatis.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
+        <mybatis-spring.version>1.2.3</mybatis-spring.version>
+        <mysql-connector-java.version>5.1.35</mysql-connector-java.version>
+        <junit.version>4.12</junit.version>
+        <druid.version>1.0.14</druid.version>
+        <jackson.version>2.5.1</jackson.version>
+        <aspectjweaver.version>1.8.6</aspectjweaver.version>
+        <shiro.version>1.2.3</shiro.version>
+        <crazycake.version>2.4.2.1-RELEASE</crazycake.version>
+        <fileupload.version>1.3.1</fileupload.version>
+        <fastjson.version>1.1.37</fastjson.version>
+        <asm.version>3.3.1</asm.version>
+        <xmlschema-core.version>2.2.1</xmlschema-core.version>
+        <wsdl4j.version>1.6.3</wsdl4j.version>
+        <neethi.version>3.0.3</neethi.version>
+        <cxf-api.version>2.7.11</cxf-api.version>
+        <validation-api.version>1.1.0.Final</validation-api.version>
+        <hibernate-validator.version>5.2.0.Final</hibernate-validator.version>
+        <taglibs.version>1.1.2</taglibs.version>
+        <jstl.version>1.2</jstl.version>
+        <commons-collections.version>3.2.1</commons-collections.version>
+        <commons-lang>2.6</commons-lang>
+        <servlet.version>3.0.1</servlet.version>
+        <trundle.version>3.2.5-RELEASE</trundle.version>
+        <trundle.web.version>3.2.6.1-RELEASE</trundle.web.version>
+        <trundle.funmonitor.version>3.2.6-RELEASE</trundle.funmonitor.version>
+        <poi.version>3.9</poi.version>
+        <ojdbc14.version>10.2.0.4.0</ojdbc14.version>
+
+    </properties>
 
     <dependencies>
         <dependency>
@@ -19,6 +53,18 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>5.0.7.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.hesc</groupId>
+            <artifactId>urp-core</artifactId>
+            <version>2.0-RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
